[package]
name = "Autonexus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
